--- a/new_fake_leds/Cargo.toml
+++ b/new_fake_leds/Cargo.toml
@@ -9,7 +9,9 @@ egui = "0.27"
 
 axum = { version = "0.7"}
 tokio = { version = "1", features = ["full"] }
+tower-http = { version = "0.3", features = ["fs"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
 parking_lot = "0.12"
+rand = "0.9.2"
