--- a/new_fake_leds/Cargo.toml
+++ b/new_fake_leds/Cargo.toml
@@ -15,3 +15,5 @@ serde_json = "1"
 
 parking_lot = "0.12"
 rand = "0.9.2"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
